# paperscout

./: .gitignore  README.md  main.py
api/: config.py  main.py  pyproject.toml
api/services/: auth_service.py
app/: config.py
app/services/: crossref_service.py  email_service.py  http_client.py  openai_service.py  semantic_openalex_service.py
app/ui/: components.py  styles.py
app/utils/: constants.py  data_processing.py
backend/: main.py  pyproject.toml  schemas.py
backend/database/: config.py  database.py  models.py  paperscout.db  seed_data.py
backend/lib/: cache.py
backend/services/: auth_service.py  download_service.py  search_service.py  user_service.py
paperscout-react/: package-lock.json  package.json
paperscout-react/app/: app.css  root.tsx
paperscout-react/app/components/: alert-dialog.tsx  app-header.tsx  app-sidebar.tsx  auth-card.tsx  data-table.tsx  date-picker.tsx  input-accordion.tsx  loading-bar.tsx  mode-toggle.tsx  radio-group.tsx  skeletons.tsx
paperscout-react/app/components/ui/: accordion.tsx  button.tsx  data-table.tsx  dropdown-menu.tsx  pagination.tsx  radio-group.tsx  sidebar.tsx
paperscout-react/app/context/: auth-context.tsx  profile-context.tsx  search-context.tsx
paperscout-react/app/layouts/: app-layout.tsx  auth-layout.tsx
paperscout-react/app/lib/: api.ts  auth.ts  search-utils.ts
paperscout-react/app/routes/: _index.tsx  journals.tsx  login.tsx  logout.tsx  profiles.tsx  register.tsx  results.tsx  test.tsx
paperscout-ui/: index.css  index.html  package-lock.json  package.json
paperscout-ui/src/: App.jsx
(+4 files in other folders)
