[project]
name = "api"
version = "0.1.0"
description = "api to scrape paper"
authors = [
    {name = "danielhilfer@outlook.de"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "jwt (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
