[project]
name = "api"
version = "0.1.0"
description = "api to scrape paper"
authors = [
    {name = "danielhilfer@outlook.de"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (<4.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
    
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
